@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+MZK 09.01.2023 09:33:35 -0800 - build 6091
+
+1. gh-605: Induced focus movement in Viewer Search dialog.
+
+--------------------------------------------------------------------------------
 drkns 08.01.2023 20:47:16 +0000 - build 6090
 
 1. gh-601: Search for folders checkbox in Find file dialog not synchronized with Hex control
